--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@ let count = 2;
 let numbers_array =[];
 let root = [];
 
+
 $("#main_input").submit('submit', () =>{
   count = parseInt($("#n_array").val());
   //console.log("count =" + count);
@@ -61,15 +62,13 @@ $("#main_input").submit('submit', () =>{
   shuffle(Object.assign([],numbers_array));
   //console.log("numbers_array after shuffle = "+numbers_array);
   // создаем дерево и помещаем в него массив
-  root = new tree_node(numbers_array,null,"tree_table"); 
+  root = new tree_node(numbers_array,null); 
   // отображаем в таблице
   event.preventDefault();
 })
 
-
-
 class tree_node {
-  constructor(n_array, parent, table_id, branch) {
+  constructor(n_array, parent, branch) {
     this.n_array = n_array;
     if (branch != null ){
       this.branch = branch;
@@ -89,42 +88,62 @@ class tree_node {
     else {
       this.level = 0;
     }
-    this.create_table(table_id);
     // запускаем создание дерева
-    this.child(table_id);
+    this.child();
   }
-  child(table_id) {
+  child() {
     if (this.n_array.length !=1){
       this.has_children = true;
       let m = Math.floor(this.n_array.length / 2);
       let l = this.n_array.slice(0,m);
       let r = this.n_array.slice(m);
-      const left = new tree_node(l, this,table_id, "left");
-      const right = new tree_node(r,this,table_id, "right");
+      const left = new tree_node(l, this, "left");
+      const right = new tree_node(r,this, "right");
+
       left.sibling = right;
       right.sibling = left;
       this.children.push(left , right);
-      //this.n_array = [];
     }
     else return 0
   }
   
+
+
   create_table(table_id){
-    console.log("in create_table")
+    // если это первый вход - обнуляем таблицу
     if (this.level == 0){
-      console.log("clean")
       $("#"+table_id).html("");
     }
-
+    // если ряд еще не был создан - создаем
     if ($('tr#level'+this.level).length == 0){
       $("#"+table_id).append($("<tr id='level"+this.level+"'></tr>"))
-      console.log("make tr with level="+this.level)
     } 
-    if ($("tr#level"+this.level+" > td#"+this.branch).length == 0 ){
-      console.log("td#"+this.branch);
-      $("tr#level"+this.level).append($("<td class='cell border' id='"+this.branch+"'>"+this.n_array+"</td>"));
-      console.log("in tr with: "+"<td class='cell border' id='"+this.branch+"'>"+this.n_array+"</td>")
-    }    
+
+    let zzzz = $("tr#level"+this.level+" > td#"+this.branch).length;
+    let ffff = $("tr#level"+this.level+" > td#"+this.branch).index(this.n_array);
+    // если ячейка с таким id не существует или существует, но без такого содержимого
+    // TODO вообще надо переделать это иначе у меня куча ячеек с одинаковы ID
+    if (zzzz == 0 || ffff == -1){
+      $("tr#level"+this.level).append($("<td class='cell border' data-toggle='tooltip' data-placement='top' title='Level "+this.level+"' id='"+this.branch+"'>"+this.n_array+"</td>"));
+    } 
+
+    if (this.n_array.length == 1 && (this.has_children || this.sibling.has_children)){
+      
+      if ($('tr#level'+(this.level+1)).length == 0){
+          $("#"+table_id).append($("<tr id='level"+(this.level+1)+"'></tr>"))
+      } 
+      $("tr#level"+(this.level+1)).append($("<td class='cell border' data-toggle='tooltip' data-placement='top' title='Level "+this.level+"' id='"+this.branch+"'>"+this.n_array+"</td>"));
+            
+    }
+
+    if (this.has_children){
+        this.children.forEach(element => {
+          element.create_table(table_id);
+        });
+      }
+      else {
+        return 0;
+      }
   }
 
 
