--- a/index.html
+++ b/index.html
@@ -153,14 +153,14 @@ class tree_node {
     let zzzz = $("tr#level"+this.level+" > td#"+this.branch).length;
     // если ячейка на этом уровне и с таким id не существует
     if (zzzz == 0){
-      $("tr#level"+this.level).append($("<td class='cell border' data-toggle='tooltip' data-placement='top' colspan='"+this.n_array.length+"'' id='"+this.branch+this.n_array.join("")+ "'>"+this.n_array+"</td>"));
+      $("tr#level"+this.level).append($("<td class='cell border' data-toggle='tooltip' data-placement='top' colspan='"+this.n_array.length+"'' id='"+this.branch+this.n_array.join("")+ "'>"+this.n_array.join(", ")+"</td>")).hide().delay(1000*this.level).fadeTo(1000, 1);
     } 
 
     if (this.n_array.length == 1 && (this.get_if_node_has_children(this.get_root(), this.level))){
       if ($('tr#level'+(this.level+1)).length == 0){
           $("#"+table_id).append($("<tr id='level"+(this.level+1)+"'></tr>"))
       } 
-      $("tr#level"+(this.level+1)).append($("<td class='cell border' data-toggle='tooltip' data-placement='top' title='Level "+this.level+"' id='"+this.branch+this.n_array.join("")+"'>"+this.n_array+"</td>"));
+      $("tr#level"+(this.level+1)).append($("<td class='cell border' data-toggle='tooltip' data-placement='top' id='"+this.branch+this.n_array.join("")+"'>"+this.n_array.join(", ")+"</td>"));
             
     }
 
