--- a/index.html
+++ b/index.html
@@ -18,37 +18,48 @@
 </head>
 
 <body>
+  <h1>Sorting</h1>
+
+
 
   <ul class="nav nav-tabs" id="myTab" role="tablist">
     <li class="nav-item" role="presentation">
-      <button class="nav-link active" id="home-tab" data-bs-toggle="tab" data-bs-target="#home" type="button" role="tab" aria-controls="home" aria-selected="true">Home</button>
+      <button class="nav-link active" id="home-tab" data-bs-toggle="tab" data-bs-target="#home" type="button"
+        role="tab">Shaker</button>
     </li>
     <li class="nav-item" role="presentation">
-      <button class="nav-link" id="profile-tab" data-bs-toggle="tab" data-bs-target="#profile" type="button" role="tab" aria-controls="profile" aria-selected="false">Profile</button>
+      <button class="nav-link" id="profile-tab" data-bs-toggle="tab" data-bs-target="#profile" type="button"
+        role="tab">Merge sort</button>
     </li>
     <li class="nav-item" role="presentation">
-      <button class="nav-link" id="contact-tab" data-bs-toggle="tab" data-bs-target="#contact" type="button" role="tab" aria-controls="contact" aria-selected="false">Contact</button>
+      <button class="nav-link" id="contact-tab" data-bs-toggle="tab" data-bs-target="#contact" type="button"
+        role="tab">Contact</button>
     </li>
   </ul>
   <div class="tab-content" id="myTabContent">
-    <div class="tab-pane fade show active" id="home" role="tabpanel" aria-labelledby="home-tab">lsdkf;sdkf;sdkf;lka;dfk ;qekrg;qekg/lekjgrjkgr</div>
-    <div class="tab-pane fade" id="profile" role="tabpanel" aria-labelledby="profile-tab">ergerg  erg  erg er erg erg erg qerg qeg qefbv</div>
-    <div class="tab-pane fade" id="contact" role="tabpanel" aria-labelledby="contact-tab">fdfv dfg ewrg sfdvb sdfb wrht wrgb fdvcb</div>
+    <div class="tab-pane fade show active" id="home" role="tabpanel" aria-labelledby="home-tab">
+
+
+
+      <div class="container justify-content-center">
+
+        <table class="table">
+          <tr id="numbers">
+          </tr>
+          <tr id="buffer">
+          </tr>
+        </table>
+        <input id="btn_shaker" type="button" class="btn btn-outline-primary btn-block" value="Shaker">
+      </div>
+
+
+
+    </div>
+    <div class="tab-pane fade" id="profile" role="tabpanel" aria-labelledby="profile-tab">Merge sort</div>
+    <div class="tab-pane fade" id="contact" role="tabpanel" aria-labelledby="contact-tab">fdfv dfg ewrg sfdvb sdfb wrht
+      wrgb fdvcb</div>
   </div>
 
-
-<h1>Sorting</h1>
-
-<div class="container justify-content-center"> 
-
-  <table class="table">
-    <tr id="numbers">
-    </tr>
-    <tr id="buffer">
-    </tr>
-  </table>
-<input id="btn_shaker" type="button" class="btn btn-outline-primary btn-block" value="Shaker">
-</div>
 
 </body>
 
